[project]
name = "nonebot-plugin-bililive"
description = "Push bilibili dynamics and live notifications to QQ with NoneBot2."
authors = [
    {name = "Akiyy_Lab", email = "2806578374@qq.com"},
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10,<4.0"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "nonebot-plugin", "bilibili", "onebot", "onebot-v11"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "click>=8.1.3",
    "httpx>=0.28.1,<1.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7",
    "nonebot2>=2.5.0",
    "playwright>=1.58.0",
    "pydantic>=1.10.0,<3.0",
    "python-dotenv>=1.2.2",
    "tortoise-orm[asyncpg]>=0.19.3",
    "packaging>=26.0",
    "msvc-runtime>=14.34.31931; sys_platform == \"win32\"",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Akiyy-dev/nonebot-plugin-bililive"
Repository = "https://github.com/Akiyy-dev/nonebot-plugin-bililive"
Documentation = "https://github.com/Akiyy-dev/nonebot-plugin-bililive#readme"
Issues = "https://github.com/Akiyy-dev/nonebot-plugin-bililive/issues"

[project.entry-points."nonebot.plugin"]
nonebot_plugin_bililive = "nonebot_plugin_bililive"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_bililive"]
plugin_dirs = []
builtin_plugins = []

[project.scripts]
bililive = "nonebot_plugin_bililive.__main__:main"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_bililive/version.py"

[tool.pdm.build]
includes = ["nonebot_plugin_bililive"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.6",
]

[tool.pdm.scripts]
test = "python -m unittest tests.test_maintenance"
format = { composite = ["isort .", "black .", "ruff check . --fix"] }
lint = { composite = ["ruff check .", "python -m unittest tests.test_maintenance"] }

[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 90
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "I"]
ignore = ["E402"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
